// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel collapsible should render component with \`collapsible\` and \`collapsed\` props 1`] = `
<div
  className="root collapsibleRoot collapsedRoot"
  hidden={false}
>
  <div
    className="header"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Header",
        }
      }
    />
    <button
      aria-expanded={false}
      className="collapseButton"
      onClick={[Function]}
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "More",
          }
        }
      />
    </button>
  </div>
  <div
    className="body"
  />
  <div
    className="footer"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Footer",
      }
    }
  />
</div>
`;

exports[`Panel collapsible should render component with \`collapsible\` prop 1`] = `
<div
  className="root collapsibleRoot"
  hidden={false}
>
  <div
    className="header"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Header",
        }
      }
    />
    <button
      aria-expanded={true}
      className="collapseButton"
      onClick={[Function]}
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "Less",
          }
        }
      />
    </button>
  </div>
  <div
    className="body"
  />
  <div
    className="footer"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Footer",
      }
    }
  />
</div>
`;

exports[`Panel default should render component with default props 1`] = `
<div
  className="root"
  hidden={false}
>
  <div
    className="body"
  />
</div>
`;

exports[`Panel hidden should render component with \`hidden\` prop 1`] = `
<div
  className="root noRefinementRoot"
  hidden={true}
>
  <div
    className="header"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Header",
        }
      }
    />
  </div>
  <div
    className="body"
  />
  <div
    className="footer"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Footer",
      }
    }
  />
</div>
`;

exports[`Panel templates should render component with custom templates 1`] = `
<div
  className="root"
  hidden={false}
>
  <div
    className="header"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Header",
        }
      }
    />
  </div>
  <div
    className="body"
  />
  <div
    className="footer"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Footer",
      }
    }
  />
</div>
`;
